# MediaSphere

./: .gitignore  Background.qml  ButtonBack.qml  ButtonBlueGradient.qml  CMakeLists.txt  Enum.qml  Header.qml  Main.qml  Menu.qml  MenuPage1.qml  MenuPage2.qml  README.md  ResourcesComponents.qml  VideoPlayer.qml  Weather.qml  WeatherContainer.qml  build.sh  customexception.h  deploy.sh  main.cpp  openmeteoapi.cpp  openmeteoapi.h
qml/shared/: Header.qml  Main.qml  qmldir
qml/shared/menu/: MenuPage1.qml  MenuPage2.qml
qml/shared/widgets/: ButtonAccelerate.qml  ButtonAudio.qml  ButtonBack.qml  ButtonBlueGradient.qml  ButtonPausePlay.qml  ButtonStop.qml  ButtonTransparent.qml  ControlMedia.qml
qml/videoPlayer/: VideoPlayer.qml
qml/weather/: Weather.qml  WeatherContainer.qml
shared/: customexception.h  global.cpp  global.h
shared/logger/: logger.cpp  logger.h
src/: ResourcesComponents.qml
src/qml/shared/menu/: MainMenu.qml  MenuPage1.qml  MenuPage2.qml
src/qml/shared/widgets/: ButtonBlueGradient.qml  ButtonReplay.qml
src/qml/videoPlayer/: qmldir
src/qml/weather/: Weather.qml  qmldir
src/shared/: customexception.h
src/shared/logger/: logger.cpp
src/videoPlayer/: videoplayer.h  videothumbnailextractor.h  videoworker.cpp  videoworker.h
src/weather/: openmeteoapi.cpp  openmeteoapi.h
tests/: CMakeLists.txt  forecast.json  infoIp.json  mocknetworkreply.cpp  mocknetworkreply.h  test_openmeteoapi.cpp  test_openmeteoapi.h
translations/: MediaSphere_fr.ts
videoPlayer/: videoplayer.cpp  videoplayer.h  videoselectionmodel.cpp  videoselectionmodel.h  videothumbnailextractor.cpp  videothumbnailextractor.h  videoworker.cpp  videoworker.h
weather/: openmeteoapi.cpp  openmeteoapi.h
widgets/: ButtonBack.qml  ButtonBlueGradient.qml  ButtonRoundBlueGradient.qml
